--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,16 @@ dependencies {
     implementation "org.koin:koin-android-viewmodel:2.0.1"
 
     testImplementation 'junit:junit:4.12'
+    testImplementation 'androidx.test:core:1.2.0'
+    testImplementation 'androidx.test.ext:junit:1.1.1'
+    testImplementation 'android.arch.core:core-testing:1.1.1'
+
+    testImplementation 'org.koin:koin-test:2.0.1'
+    testImplementation 'org.amshove.kluent:kluent-android:1.56'
+    testImplementation 'io.mockk:mockk:1.9.3'
+    testImplementation 'io.mockk:mockk-android:1.9.3'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.2'
+
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
